Changes to make it work with Java 1.4